回退版本解决冲突

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd-mobile": "^5.12.3",
     "antd-mobile-icons": "^0.2.2",
+    "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-lorem-ipsum": "^1.4.10",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.24"
   }
 }
